--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,9 @@ path = "src/sysm.rs"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.91"
 clap = { version = "4.1.4", features = ["derive"] }
+prost = "0.11.6"
+tonic = "0.8.3"
+tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
+
+[build-dependencies]
+tonic-build = "0.8.4"
